# HRRPGen-geometry

./: README.md  pyproject.toml  requirements.txt  setup.cfg
configs/: ddpm_scalars.yaml  ddpm_scalars_dims_only.yaml  ddpm_scalars_va_only.yaml  gan_scalars.yaml  gan_scalars_va_only.yaml
data/: ship_hrrp.pt
results/Samples/2026-04-10/ddpm_seed0/0/: config.yaml
results/Samples/2026-04-10/gan_scalars_dims_only_seed0/0/: config.yaml
results/Samples/2026-04-10/gan_scalars_seed0/1/: config.yaml
results/Samples/2026-04-10/gan_seed0/0/: config.yaml
src/icassp/: ddpm.py  train.py
src/ship_hrrp_gen/: Dataset.py  __init__.py  ddpm.py  ema.py  gan.py  model.py  schedulers.py  train.py  utils.py
