[metadata]
name = ship_hrrp_gen
version = 0.1.0
description = DDPM/GAN training code for HRRP data
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src
